--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "howler": "^2.2.4",
     "jwt-decode": "^4.0.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
